--- a/glitch-sphere/index.html
+++ b/glitch-sphere/index.html
@@ -89,6 +89,7 @@
 
     self.renderer = new THREE.WebGLRenderer({ alpha: true });
     self.renderer.setClearColor(0x1E1E20, 1.0);
+
     self.renderer.setPixelRatio(window.devicePixelRatio);
     self.renderer.setSize(window.innerWidth, window.innerHeight);
     self.renderer.shadowMap.enabled = true;
@@ -223,9 +224,9 @@
   ThreejsScene.prototype.addSmoke = function () {
     var self = this;
 
-    var geometry = new THREE.PlaneGeometry(50, 50);
+    var geometry = new THREE.PlaneGeometry(35, 35);
     var material = new THREE.MeshBasicMaterial({
-      map: THREE.ImageUtils.loadTexture('../assets/img/smoke.png'),
+      map: THREE.ImageUtils.loadTexture('../assets/img/smoke_white.png'),
       transparent: true,
       opacity: 0.9
     });
@@ -248,7 +249,6 @@
     self.tl = new TimelineMax({repeat: 0});
     self.tl.to(self.smokeGroup.scale, 2, {x: 1, y: 1, z: 1, ease: Power1.easeOut});
     self.tl.to(plane.material, 1.2, {opacity: 1, ease: Power1.easeOut}, "=-1");
-
 
     self.scene.add(self.smokeGroup);
   };
